Added links to error message pages

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>Ruby on Rails: Welcome aboard</title>
+    <a href="404.html">Goto page : 404</a>
+    <a href="422.html">Goto page : 422</a>
+    <a href="500.html">Goto page : 500</a>
     <style type="text/css" media="screen">
       body {
         margin: 0;
